--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "babel": "^6.3.26",
     "babel-core": "^6.3.26",
-    "babel-eslint": "^5.0.0-beta6",
+    "babel-eslint": "^6.0.4",
     "babel-istanbul": "^0.6.0",
     "babel-istanbul-loader": "^0.0.1",
     "babel-loader": "^6.2.1",
@@ -31,10 +31,14 @@
     "babel-preset-stage-1": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
     "chai": "^3.4.1",
-    "eslint": "^1.10.3",
-    "eslint-config-alvinteh": "^0.1.1",
+    "eslint": "^2.10.2",
+    "eslint-config-alvinteh": "^0.3.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-react": "^5.1.1",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
+    "eslint-plugin-import": "^1.8.1",
     "eslint-loader": "^1.2.0",
-    "eslint-plugin-react": "^3.14.0",
+    "eslint-plugin-react": "^5.1.1",
     "karma": "^0.13.19",
     "karma-cli": "^0.1.2",
     "karma-coverage": "^0.5.3",
@@ -43,7 +47,9 @@
     "karma-phantomjs-launcher": "^0.2.3",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
+    "mocha": "^2.5.3",
     "mocha-loader": "^0.7.1",
+    "phantomjs-prebuilt": "^2.1.7",
     "sinon": "^1.17.2",
     "webpack": "^1.12.10",
     "webpack-dev-middleware": "^1.4.0",
